# MRLess-Server

./: LICENSE
DataBase/: main.py  users.db
DataBase/db/: db_manager.py
DataBase/user/: user_manager.py
Manager/: Cargo.toml
Manager/src/: API.rs  api.rs  chat.rs  main.rs  user.rs
WebSocetServer/: Cargo.toml
WebSocetServer/src/: main.rs
