[package]
name = "LocateServer"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = "0.23.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
zmq = "0.10.0"
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }
actix-cors = "0.7.0"
